Add year slider

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,6 +18,19 @@
 }
 
 .select {
-  width: 100%;
+  margin-right: 10px;
+  margin-top: 5px;
+  flex: 1;
+}
+
+.year-slider {
+  margin-left: 10px;
   margin-top: 15px;
+  flex: 1;
+}
+
+.thumb {
+  height: 25px;
+  width: 25px;
+  color: blue;
 }
