--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,28 +1,38 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /*border: 1px solid black;*/
+}
+
+.placeholder {
+  display: grid;
+  place-content: center;
+  font-size: 50px;
+}
+
+html, body, #root, .app-container {
+  width: 100%;
+  height: 100%;
 }
 
 .app-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-.side-container {
-  display: flex;
-  flex: 2;
-  height: 100%;
-  flex-direction: column;
-  align-items: center;
+.left-container,
+.right-container {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 30px;
+  padding: 30px;
 }
 
 .central-container {
-  flex: 3;
-  height: 100%;
-  flex-direction: column;
-}
-
-.map-container {
-  height: 500px;
+  /*background-color: aquamarine;*/
+  display: grid;
+  grid-template-rows: 10fr 1fr 1fr 6fr;
+  grid-gap: 30px;
+  padding: 30px;
 }
