--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -36,3 +36,8 @@ html, body, #root, .app-container {
   grid-gap: 30px;
   padding: 30px;
 }
+
+.grid-cell, .chart-container {
+  width: 100%;
+  height: 100%;
+}
