--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -32,7 +32,7 @@ html, body, #root, .app-container {
 .central-container {
   /* background-color: aquamarine; */
   display: grid;
-  grid-template-rows: 10fr 1fr 1fr 6fr;
+  grid-template-rows: 10fr 1fr 1fr 3fr 3fr;
   grid-gap: 30px;
   padding: 30px;
 }
