--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -41,3 +41,16 @@ html, body, #root, .app-container {
   width: 100%;
   height: 100%;
 }
+
+.highcharts-title {
+  font-size: 30px !important;
+}
+
+text, p {
+  font-size: 15px !important;
+}
+
+.MuiSelect-select{
+  font-size: 30px !important;
+  min-height: 0px !important;
+}
