--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -22,3 +22,12 @@
     position: absolute;
     padding: 5px;
 }
+
+.highcharts-legend .highcharts-point{
+    height: 25px;
+    width: 25px;
+    rx: 13px;
+    ry: 13px;
+    x: -8px;
+    y: -4px;
+}
